--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: biometric_authentication
+name: auth
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -62,8 +62,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-assets:
- - images/google_logo.png
+  assets:
+    - assets/images/google_logo.png
+    - assets/images/firebase_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
